--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
+  flutter_native_splash: ^2.4.4
 
 dev_dependencies:
   flutter_test:
@@ -87,3 +88,16 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+# dart run flutter_native_splash:create
+flutter_native_splash:
+  android: true
+  ios: true
+  web: false
+  color: "#8A9A5B"
+  icon_background_color: "#8A9A5B"
+  image: "assets/diary_icon_circle.png"
+  android_12:
+    color: "#8A9A5B"
+    icon_background_color: "#8A9A5B"
+    image: "assets/diary_icon_circle.png"
